gcc/testsuite/gdc.test/runnable/test10573.d
// EXTRA_SOURCES: imports/test10573a.d

import imports.test10573a;
void main(string[] args) {}
